'update raw-data, clean-data, and script files'

--- a/scripts/adopt-a-drain/Process.ipynb
+++ b/scripts/adopt-a-drain/Process.ipynb
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib notebook\n",
+    "# %matplotlib notebook\n",
     "from IPython.display import display, HTML\n",
     "from IPython.display import Markdown\n",
     "from ipywidgets import *\n",
@@ -287,39 +287,74 @@
       "Requirement already satisfied: datadotworld[pandas] in /Users/jameswilfong/anaconda/lib/python3.6/site-packages\n",
       "Requirement already satisfied: click<7.0a,>=6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: urllib3<2.0a,>=1.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: jsontableschema<1.0a,>=0.10.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: python-dateutil<3.0a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: requests<3.0a,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: six<2.0a,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: configparser<4.0a,>=3.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: flake8<3.4.1a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: tabulator<=1.4.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: datapackage<1.0a,>=0.8.8 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: configparser<4.0a,>=3.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: python-dateutil<3.0a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: six<2.0a,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: flake8<3.4.1a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: jsontableschema<1.0a,>=0.10.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: certifi>=2017.04.17 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: requests<3.0a,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: pandas<1.0a; extra == \"pandas\" in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: isodate<1.0,>=0.5.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: future<1.0,>=0.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: rfc3986<1.0,>=0.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: jsonschema<3.0,>=2.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: unicodecsv<1.0,>=0.14 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: xlrd<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: sqlalchemy<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: jsonlines<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: cchardet<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: linear-tsv<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: ijson<3.0,>=2.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: openpyxl<3.0,>=2.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: pycodestyle<2.4.0,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: pyflakes<1.6.0,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: mccabe<0.7.0,>=0.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from requests<3.0a,>=2.0.0->datadotworld[pandas])\n",
       "Requirement already satisfied: idna<2.7,>=2.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from requests<3.0a,>=2.0.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: pycodestyle<2.4.0,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: mccabe<0.7.0,>=0.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: pyflakes<1.6.0,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: sqlalchemy<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: jsonlines<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: linear-tsv<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: unicodecsv<2.0,>=0.14 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: cchardet<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: xlrd<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: openpyxl<3.0,>=2.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: ijson<3.0,>=2.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: jsonschema<3.0a,>=2.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datapackage<1.0a,>=0.8.8->datadotworld[pandas])\n",
+      "Requirement already satisfied: isodate<1.0,>=0.5.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: rfc3986<1.0,>=0.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: future<1.0,>=0.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
       "Requirement already satisfied: pytz>=2011k in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from pandas<1.0a; extra == \"pandas\"->datadotworld[pandas])\n",
       "Requirement already satisfied: numpy>=1.7.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from pandas<1.0a; extra == \"pandas\"->datadotworld[pandas])\n",
       "Requirement already satisfied: jdcal in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from openpyxl<3.0,>=2.4->tabulator<=1.4.1->datadotworld[pandas])\n",
       "Requirement already satisfied: et_xmlfile in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from openpyxl<3.0,>=2.4->tabulator<=1.4.1->datadotworld[pandas])\n",
       "\u001b[33mYou are using pip version 9.0.1, however version 18.0 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Requirement already satisfied: ipywidgets in /Users/jameswilfong/anaconda/lib/python3.6/site-packages\n",
+      "Requirement already satisfied: ipykernel>=4.5.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipywidgets)\n",
+      "Requirement already satisfied: traitlets>=4.3.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipywidgets)\n",
+      "Requirement already satisfied: nbformat>=4.2.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipywidgets)\n",
+      "Requirement already satisfied: widgetsnbextension~=3.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipywidgets)\n",
+      "Requirement already satisfied: ipython>=4.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipywidgets)\n",
+      "Requirement already satisfied: jupyter_client in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipykernel>=4.5.1->ipywidgets)\n",
+      "Requirement already satisfied: tornado>=4.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipykernel>=4.5.1->ipywidgets)\n",
+      "Requirement already satisfied: ipython_genutils in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from traitlets>=4.3.1->ipywidgets)\n",
+      "Requirement already satisfied: six in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from traitlets>=4.3.1->ipywidgets)\n",
+      "Requirement already satisfied: decorator in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from traitlets>=4.3.1->ipywidgets)\n",
+      "Requirement already satisfied: jsonschema!=2.5.0,>=2.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from nbformat>=4.2.0->ipywidgets)\n",
+      "Requirement already satisfied: jupyter_core in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from nbformat>=4.2.0->ipywidgets)\n",
+      "Requirement already satisfied: notebook>=4.4.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from widgetsnbextension~=3.0.0->ipywidgets)\n",
+      "Requirement already satisfied: setuptools>=18.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipython>=4.0.0->ipywidgets)\n",
+      "Requirement already satisfied: jedi>=0.10 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipython>=4.0.0->ipywidgets)\n",
+      "Requirement already satisfied: pickleshare in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipython>=4.0.0->ipywidgets)\n",
+      "Requirement already satisfied: simplegeneric>0.8 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipython>=4.0.0->ipywidgets)\n",
+      "Requirement already satisfied: prompt_toolkit<2.0.0,>=1.0.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipython>=4.0.0->ipywidgets)\n",
+      "Requirement already satisfied: pygments in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipython>=4.0.0->ipywidgets)\n",
+      "Requirement already satisfied: appnope in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipython>=4.0.0->ipywidgets)\n",
+      "Requirement already satisfied: pexpect in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from ipython>=4.0.0->ipywidgets)\n",
+      "Requirement already satisfied: pyzmq>=13 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jupyter_client->ipykernel>=4.5.1->ipywidgets)\n",
+      "Requirement already satisfied: python-dateutil>=2.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jupyter_client->ipykernel>=4.5.1->ipywidgets)\n",
+      "Requirement already satisfied: wcwidth in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from prompt_toolkit<2.0.0,>=1.0.4->ipython>=4.0.0->ipywidgets)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mYou are using pip version 9.0.1, however version 18.0 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
+      "Enabling notebook extension jupyter-js-widgets/extension...\n",
+      "      - Validating: \u001b[32mOK\u001b[0m\n"
      ]
     },
     {
@@ -328,7 +363,8 @@
        "<a id='notebook-config'></a>\n",
        "## Notebook Config\n",
        "* python-dotenv\n",
-       "* datadotworld"
+       "* datadotworld\n",
+       "* ipywidgets"
       ],
       "text/plain": [
        "<IPython.core.display.Markdown object>"
@@ -573,8 +609,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* clean_column_names: 0.005676984786987305 sec\n",
-      "* remove_obvious_outliers: 0.011351823806762695 sec\n"
+      "* clean_column_names: 0.006602048873901367 sec\n",
+      "* remove_obvious_outliers: 0.011165857315063477 sec\n"
      ]
     },
     {
@@ -794,7 +830,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -806,73 +842,32 @@
       "branches:  ['*', 'docs', 'master']\n",
       "users:  ['GitHub', 'noreply@github.com', 'James', 'wilfongjt@gmail.com']\n"
      ]
-    }
-   ],
-   "source": [
-    "import subprocess\n",
-    "def getBranch():\n",
-    "    '''\n",
-    "    return current branch name\n",
-    "    '''\n",
-    "    rc = subprocess.check_output([\"git\", \"branch\", \"--contains\", \"HEAD\"]).decode().replace('* ','')\n",
-    "    return rc\n",
-    "    \n",
-    "def getBranchList():\n",
-    "    '''\n",
-    "    return list of user assigned to repo\n",
-    "    \n",
-    "    '''\n",
-    "    bytelist = subprocess.check_output([\"git\", \"branch\"])\n",
-    "    _list = bytelist.decode().split() \n",
-    "    return _list\n",
-    "\n",
-    "def getContributerList():\n",
-    "    '''\n",
-    "    return list of contributors for this repo\n",
-    "    '''\n",
-    "    \n",
-    "    cmd = 'git log --pretty=\"%an %ae%n%cn %ce\" | sort | uniq'\n",
-    "    ps = subprocess.Popen(cmd,shell=True,stdout=subprocess.PIPE,stderr=subprocess.STDOUT)\n",
-    "    bytelist = ps.communicate()[0]\n",
-    "    #print('bytelist: ', bytelist)\n",
-    "    _list = bytelist.decode().split() \n",
-    "    return _list\n",
-    "\n",
-    "print(\"branch: \"+ getBranch())\n",
-    "print(\"branches: \", getBranchList())\n",
-    "print(\"users: \", getContributerList())\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c34c2ab9b9d14cba9f42cfcfe5e9015c",
-       "version_major": 2,
-       "version_minor": 0
-      },
+      "text/markdown": [
+       "GitHub State\n",
+       "============\n",
+       "* Branch: docs\n",
+       "\n",
+       "* Branches: ['*', 'docs', 'master']\n",
+       "* Contributors: ['GitHub', 'noreply@github.com', 'James', 'wilfongjt@gmail.com']"
+      ],
       "text/plain": [
-       "A Jupyter Widget"
+       "<IPython.core.display.Markdown object>"
       ]
      },
+     "execution_count": 21,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "from ipywidgets import widgets\n",
-    "from IPython.display import display\n",
-    "text = widgets.Text()\n",
-    "display(text)\n",
+    "import github\n",
     "\n",
-    "def handle_submit(sender):\n",
-    "    print(text.value)\n",
+    "github.showState(cell_log)\n",
     "\n",
-    "text.on_submit(handle_submit)\n"
+    "Markdown('''{}'''.format(cell_log.getMarkdown()))"
    ]
   },
   {
