--- a/scripts/adopt-a-drain/01.Dev.Process.ipynb
+++ b/scripts/adopt-a-drain/01.Dev.Process.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,8 @@
     "%%javascript\n",
     "IPython.OutputArea.prototype._should_scroll = function(lines) {\n",
     "    return false;\n",
-    "}\n"
+    "}\n",
+    "\n"
    ]
   },
   {
@@ -37,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -100,16 +101,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "settings\n"
-     ]
-    },
     {
      "data": {
       "text/markdown": [
@@ -120,7 +114,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -155,7 +149,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +213,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,6 +223,7 @@
     "cell_log.collect('## Helper Functions ')\n",
     "cell_log.collect('')\n",
     "cell_log.collect('* get_app_name( script_folder_name )')\n",
+    "\n",
     "def get_app_name(scripts_path):\n",
     "    '''\n",
     "    returns application name from script path\n",
@@ -260,6 +255,7 @@
     "    if not os.path.exists(rc):\n",
     "        os.makedirs(rc)\n",
     "    return rc\n",
+    "\n",
     "def getSourceData(tblDef):\n",
     "    '''\n",
     "    returns the original raw data as pandas dataframe\n",
@@ -276,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -287,35 +283,35 @@
       "\u001b[33mYou are using pip version 9.0.1, however version 18.0 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
       "Requirement already satisfied: datadotworld[pandas] in /Users/jameswilfong/anaconda/lib/python3.6/site-packages\n",
-      "Requirement already satisfied: click<7.0a,>=6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: datapackage<1.0a,>=0.8.8 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: flake8<3.4.1a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: urllib3<2.0a,>=1.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: click<7.0a,>=6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: jsontableschema<1.0a,>=0.10.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: requests<3.0a,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: python-dateutil<3.0a,>=2.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: certifi>=2017.04.17 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: six<2.0a,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: datapackage<1.0a,>=0.8.8 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: urllib3<2.0a,>=1.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: tabulator<=1.4.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: configparser<4.0a,>=3.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: six<2.0a,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: tabulator<=1.4.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
+      "Requirement already satisfied: requests<3.0a,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
       "Requirement already satisfied: pandas<1.0a; extra == \"pandas\" in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datadotworld[pandas])\n",
-      "Requirement already satisfied: mccabe<0.7.0,>=0.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: pycodestyle<2.4.0,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: jsonschema<3.0a,>=2.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datapackage<1.0a,>=0.8.8->datadotworld[pandas])\n",
+      "Requirement already satisfied: unicodecsv<1.0a,>=0.14 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from datapackage<1.0a,>=0.8.8->datadotworld[pandas])\n",
       "Requirement already satisfied: pyflakes<1.6.0,>=1.5.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: unicodecsv<1.0,>=0.14 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: jsonschema<3.0,>=2.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: isodate<1.0,>=0.5.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: future<1.0,>=0.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: pycodestyle<2.4.0,>=2.0.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: mccabe<0.7.0,>=0.6.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from flake8<3.4.1a,>=2.6.0->datadotworld[pandas])\n",
       "Requirement already satisfied: rfc3986<1.0,>=0.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: future<1.0,>=0.15 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: isodate<1.0,>=0.5.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from jsontableschema<1.0a,>=0.10.0->datadotworld[pandas])\n",
+      "Requirement already satisfied: ijson<3.0,>=2.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: xlrd<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: openpyxl<3.0,>=2.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: cchardet<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: linear-tsv<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: sqlalchemy<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
+      "Requirement already satisfied: jsonlines<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
       "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from requests<3.0a,>=2.0.0->datadotworld[pandas])\n",
       "Requirement already satisfied: idna<2.7,>=2.5 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from requests<3.0a,>=2.0.0->datadotworld[pandas])\n",
-      "Requirement already satisfied: ijson<3.0,>=2.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: linear-tsv<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: xlrd<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: cchardet<2.0,>=1.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: jsonlines<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: sqlalchemy<2.0,>=1.1 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
-      "Requirement already satisfied: openpyxl<3.0,>=2.4 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from tabulator<=1.4.1->datadotworld[pandas])\n",
       "Requirement already satisfied: pytz>=2011k in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from pandas<1.0a; extra == \"pandas\"->datadotworld[pandas])\n",
       "Requirement already satisfied: numpy>=1.7.0 in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from pandas<1.0a; extra == \"pandas\"->datadotworld[pandas])\n",
       "Requirement already satisfied: jdcal in /Users/jameswilfong/anaconda/lib/python3.6/site-packages (from openpyxl<3.0,>=2.4->tabulator<=1.4.1->datadotworld[pandas])\n",
@@ -372,7 +368,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -425,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {
     "scrolled": true
    },
@@ -439,8 +435,8 @@
        "* desc: Storm Drains of the Grand River Basin, Michigan\n",
        "* DW_USER: wilfongjt\n",
        "* DW_DB_URL: https://api.data.world/v0/datasets/wilfongjt/\n",
-       "* GH_URL_RAW: https://raw.githubusercontent.com/Wilfongjt/data.world/master/raw-data/\n",
-       "* GH_URL_CLEAN: https://raw.githubusercontent.com/Wilfongjt/data.world/master/clean-data/\n",
+       "* GH_URL_RAW: https://raw.githubusercontent.com/wilfongjt/data.world/master/raw-data/\n",
+       "* GH_URL_CLEAN: https://raw.githubusercontent.com/wilfongjt/data.world/master/clean-data/\n",
        "* LOCAL_SCRIPT_FOLDER: /Users/jameswilfong/Documents/Github/CitizenLabs/data.world/scripts/adopt-a-drain\n",
        "* LOCAL_APP_NAME: adopt-a-drain\n",
        "* LOCAL_REPO_FOLDER: /Users/jameswilfong/Documents/Github/CitizenLabs/data.world\n",
@@ -452,7 +448,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -523,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +529,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,15 +600,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* clean_column_names: 0.005679130554199219 sec\n",
-      "* remove_obvious_outliers: 0.010877370834350586 sec\n"
+      "* clean_column_names: 0.005112648010253906 sec\n",
+      "* remove_obvious_outliers: 0.01128697395324707 sec\n"
      ]
     },
     {
@@ -630,7 +626,6 @@
        "* outlier: Remove 0 observations too far west or east.\n",
        "* outlier: Remove 0 observations too far north or south.\n",
        "* duplicates: dropped 225 duplicate facility ids\n",
-       "* system: overwrite /Users/jameswilfong/Documents/Github/CitizenLabs/data.world/clean-data/adopt-a-drain/gr_drains.csv \n",
        "* inter-output: columns ['dr_subtype' 'dr_jurisdiction' 'dr_owner' 'dr_local_id' 'dr_facility_id'\n",
        " 'dr_subwatershed' 'dr_lon' 'dr_lat' 'dr_asset_no' 'dr_type' 'dr_sync_id']\n",
        "* inter-output: 39964 obs to /Users/jameswilfong/Documents/Github/CitizenLabs/data.world/clean-data/adopt-a-drain/gr_drains.csv"
@@ -639,7 +634,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,18 +728,16 @@
     "    ecnt = len(df_source)\n",
     "    cell_log.collect('* duplicates: dropped {} duplicate facility ids'.format(scnt - ecnt))\n",
     "\n",
-    "\n",
     "    '''\n",
     "    --------------------------------- save csv \n",
     "    '''\n",
     "    # assume new file and remove old one\n",
     "    if os.path.isfile(tbl[\"local_clean\"]):\n",
     "        os.remove(tbl['local_clean'])\n",
-    "        cell_log.collect('* system: overwrite {} '.format(tbl['local_clean']))\n",
-    "\n",
+    "        cell_log.collect('* deleted {} '.format(tbl['local_clean']))\n",
+    "    \n",
     "    cell_log.collect(\"* inter-output: columns {}\".format(df_source.columns.values))\n",
     "    cell_log.collect('* inter-output: {} obs to {}'.format(len(df_source) , tbl[\"local_clean\"]))\n",
-    "\n",
     "\n",
     "    df_source.to_csv(tbl[\"local_clean\"], index=False)\n",
     "\n",
@@ -753,57 +746,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2018-08-20 12:53:57,383 WARNING Retrying (Retry(total=2, connect=None, read=None, redirect=None, status=None)) after connection broken by 'SSLError(SSLError(\"bad handshake: SysCallError(54, 'ECONNRESET')\",),)': /v0/datasets/wilfongjt/grb-storm-drains\n"
-     ]
-    },
-    {
      "data": {
-      "text/markdown": [
-       "\n",
-       "# GIT Process\n",
-       "* input: /Users/jameswilfong/Documents/Github/CitizenLabs/data.world/clean-data/adopt-a-drain/gr_drains.csv\n",
-       "* git add ../../raw-data -A\n",
-       "* git add ../../clean-data -A\n",
-       "* git add ../../scripts -A\n",
-       "* git add ../../README.md -A\n",
-       "* git commit -m \"update raw-data, clean-data, and scripts\"\n",
-       "\n",
-       "# Data.World Process\n",
-       "* input: https://raw.githubusercontent.com/Wilfongjt/data.world/master/clean-data/gr_drains.csv\n",
-       "* load: 39964 observations\n",
-       "* drop: wilfongjt/grb-storm-drains\n",
-       "* delay: 6 seconds to delete data\n",
-       "* load: complete\n",
-       "* output: https://api.data.world/v0/datasets/wilfongjt/gr_drains.csv\n",
-       "# OK - Done"
-      ],
       "text/plain": [
-       "<IPython.core.display.Markdown object>"
+       "'\\ncell_log.clear()\\nif ENV_ERROR:\\n    cell_log.collect(\"# Script Failure!!\")\\n    cell_log.collect(\"# !!! Missing Environment Variables !!!\")\\n    cell_log.collect(\"### see [Environment Variable Setup](#env-setup)\")\\nelse:\\n    # interface.git_hub(df_source, tbl, cell_log)\\n    #interface.data_world(df_source, tbl, cell_log)\\n    cell_log.collect(\"# OK - Done\") \\n'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''\n",
     "cell_log.clear()\n",
     "if ENV_ERROR:\n",
     "    cell_log.collect(\"# Script Failure!!\")\n",
     "    cell_log.collect(\"# !!! Missing Environment Variables !!!\")\n",
     "    cell_log.collect(\"### see [Environment Variable Setup](#env-setup)\")\n",
     "else:\n",
-    "    interface.git_hub(df_source, tbl, cell_log)\n",
-    "    interface.data_world(df_source, tbl, cell_log)\n",
+    "    # interface.git_hub(df_source, tbl, cell_log)\n",
+    "    #interface.data_world(df_source, tbl, cell_log)\n",
     "    cell_log.collect(\"# OK - Done\") \n",
-    "Markdown('''{}'''.format(cell_log.getMarkdown()))"
+    "'''    \n",
+    "# Markdown('''{}'''.format(cell_log.getMarkdown()))\n"
    ]
   },
   {
@@ -840,7 +809,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
